--- a/package.json
+++ b/package.json
@@ -12,13 +12,19 @@
     "static-server": "^2.0.0"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.22.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.1",
+    "gulp-declare": "^0.3.0",
+    "gulp-handlebars": "^4.0.0",
     "gulp-livereload": "^3.8.1",
     "gulp-minify-css": "^1.2.4",
     "gulp-plumber": "^1.1.0",
     "gulp-sourcemaps": "^2.4.0",
-    "gulp-uglify": "^2.0.0"
+    "gulp-uglify": "^2.0.0",
+    "gulp-wrap": "^0.13.0",
+    "handlebars": "^4.0.6"
   }
 }
